@@ -72,6 +72,9 @@ error500 = "./var/www/error/500.html"
 error501 = "./var/www/error/501.html"
 error505 = "./var/www/error/505.html"
 
+//save all user-made requests to log file
+log_requests_short = 0
+
 [Native page execution]
 //Number of theards executing requests
 exec_theards = 4
